# data_academy

./: .gitattributes  .gitignore  README.md
apps/streamlit/example-app/: app.py
apps/streamlit/example-app/.streamlit/: config.toml
database/projects/example-project/: example-project.sqlproj
learning/: README.md
learning/sql/: 01_database_fundamentals.ipynb  02_tsql_programming.ipynb
python/lib/db-connector/: README.md  pyproject.toml
python/lib/db-connector/src/db_connector/: __init__.py
python/lib/pbi-utils/: README.md  pyproject.toml
python/lib/pbi-utils/src/pbi_utils/: __init__.py
python/projects/example-project/: pyproject.toml  requirements.txt
use-cases/01_sales-analysis/: README.md
